# dissona2

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  flake.nix  justfile  process-compose.yaml  pyproject.toml
.agents/skills/: bmad-advanced-elicitation  bmad-agent-quick-flow-solo-dev  bmad-agent-tech-writer  bmad-brainstorming  bmad-code-review  bmad-create-epics-and-stories  bmad-create-prd  bmad-create-ux-design  bmad-domain-research  bmad-edit-prd  bmad-generate-project-context  bmad-help  bmad-index-docs  bmad-retrospective  bmad-shard-doc  bmad-sprint-planning  bmad-sprint-status  bmad-validate-prd
.augment/skills/: bmad-agent-analyst  bmad-agent-architect  bmad-agent-dev  bmad-agent-pm  bmad-agent-qa  bmad-agent-sm  bmad-agent-ux-designer  bmad-check-implementation-readiness  bmad-correct-course  bmad-create-architecture  bmad-create-story  bmad-dev-story  bmad-distillator  bmad-document-project  bmad-editorial-review-prose  bmad-editorial-review-structure  bmad-init  bmad-market-research  bmad-party-mode  bmad-product-brief  bmad-qa-generate-e2e-tests  bmad-quick-dev  bmad-review-adversarial-general  bmad-review-edge-case-hunter  bmad-technical-research
_bmad-output/implementation-artifacts/: sprint-status.yaml
_bmad-output/implementation-artifacts/stories/: story-1-1-google-oauth-sign-up.md  story-1-2-sign-in-and-sign-out.md  story-1-3-cross-device-session.md  story-1-4-sample-content.md  story-1-5-guided-first-upload.md  story-1-6-push-notification-permission.md  story-2-1-pdf-upload.md  story-2-2-chapter-detection.md  story-2-3-metadata-extraction.md  story-2-4-status-polling.md  story-2-5-multi-document.md
_bmad-output/planning-artifacts/: architecture.md  epics-and-stories.md  implementation-readiness-report-2026-04-12.md  prd.md  product-brief-disona-distillate.md  product-brief-disona.md  ux-design.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
frontend/: .env  .env.example  Dockerfile  flake.nix  index.html  justfile  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  main.tsx
services/api/: .env  .env.example  Cargo.toml  Dockerfile  deny.toml  flake.nix  justfile
services/api/migrations/: 001_create_voices.sql  002_create_projects.sql  003_create_documents.sql  004_create_chapters.sql  005_create_segments.sql  006_create_key_points.sql  007_create_summaries.sql  008_create_podcast_episodes.sql  009_create_audio_files.sql  010_create_playback_progress.sql  011_create_shares.sql  012_create_share_redemptions.sql  013_create_push_subscriptions.sql  014_add_sample_columns.sql  015_make_chapter_document_nullable.sql  016_cascade_chapters_on_project_delete.sql
services/api/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  nats.rs  s3.rs  telemetry.rs
services/api/src/handlers/: health.rs  mod.rs  progress.rs  projects.rs  push.rs  samples.rs
services/api/tests/: helpers.rs  progress_handlers_test.rs  project_handlers_test.rs  push_handlers_test.rs  samples_handlers_test.rs
services/auth/: .env  .env.example  Cargo.toml  Dockerfile  clippy.toml  flake.nix  justfile  rustfmt.toml
services/auth/.cargo/: config.toml
services/auth/migrations/: 001_create_users.sql  002_create_user_preferences.sql  003_add_first_upload_flag.sql
services/auth/src/: cli.rs  config.rs  error.rs  jwt.rs  lib.rs  main.rs  oauth.rs
services/auth/src/handlers/: google.rs  health.rs  mod.rs  refresh.rs  verify.rs
services/auth/tests/: auth_handlers_test.rs
services/llm-worker/: .env  .env.example  Dockerfile  flake.nix  justfile  requirements.txt
services/pdf-worker/: .env  .env.example  Dockerfile  flake.nix  justfile  requirements.txt
services/tts-worker/: .env  .env.example  Dockerfile  flake.nix  justfile  requirements.txt
(+76 files in other folders)
