[package]
name = "disona-api"
version = "0.1.0"
edition = "2021"
authors = ["Disona Team"]
description = "Disona API Service"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Message queue
async-nats = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# JWT
jsonwebtoken = "9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
tracing-opentelemetry = "0.22"

# S3 storage
aws-sdk-s3 = "1"
aws-config = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Misc
futures = "0.3"
bytes = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
