[package]
name = "dissona-auth"
version = "0.1.0"
edition = "2021"
authors = ["Dissona Team"]
description = "Dissona Auth Service"

[[bin]]
name = "dissona-auth"
path = "src/main.rs"

[[bin]]
name = "dissona-auth-cli"
path = "src/cli.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# OAuth
oauth2 = "4"
reqwest = { version = "0.11", features = ["json"] }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

# Security
argon2 = "0.5"
rand = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"
